--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
