SECC updated projects & blog (in progress)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,13 @@
 {
   "lang": "es",
-  "short_name": "Portfolio | Jhon Arciniegas",
-  "name": "Jhon Arciniegas | Desarrollador de Software",
+  "short_name": "Portfolio - Jhon",
+  "name": "Jhon Arciniegas - Desarrollador de Software",
   "description": "Portafolio personal de Jhon Arciniegas, desarrollador de software. Explora mis proyectos y experiencia.",
   "icons": [
     {
       "src": "/logo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "/logo.ico",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": "https://jhon-arciniegas.vercel.app",
